# dnf-plugin-bootc

./: CMakeLists.txt  README.md  TODO  dnf-plugin-bootc.spec
doc/: CMakeLists.txt  bootc.rst
plugins/: CMakeLists.txt  bootc.py
po/: CMakeLists.txt  dnf-plugin-bootc.pot
